# pcxarray

./: .gitignore  .readthedocs.yml  README.md  naip_demo.ipynb  pyproject.toml
docs/: conf.py  index.rst  modules.rst  pcxarray.rst
docs/examples/: gnatsgo.ipynb
examples/: gnatsgo.ipynb  hls_timeseries.ipynb  landsat_timeseries.ipynb  naip.ipynb  sentinel2_timeseries.ipynb  sentinel2_timeseries_2.ipynb
src/pcxarray/: __init__.py  cache.py  io.py  processing.py  query.py  utils.py
