[project]
name = "pcxarray"
version = "0.1.0"
description = "Planetary Computer xarray/geospatial utilities"
authors = [
    { name = "Dakota Hester", email = "dh2306@msstate.edu" },
    { name = "Vitor Souza Martins", email = "vmartins@abe.msstate.edu" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "requests",
    "shapely",
    "pystac",
    "pystac-client",
    "planetary-computer",
    "geopandas",
    "pyproj",
    "rasterio",
    "rioxarray",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "mypy",
    "ipython",
    "jupyter",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]